# streampp

./: .gitmodules  CMakeLists.txt  README.md  service.7z
streampp/: CMakeLists.txt  concepts.h  istream.h  istream_concept.h  istream_overloads.hpp  iunistream.h  iunistream_overloads.hpp  ostream.h  ostream_concept.h  ostream_overloads.hpp  ounistream.h  ounistream_overloads.hpp  streampp.cpp  streampp.h  traits.h
tests/: CMakeLists.txt  main.cpp  template.json
